# AquaComputerWiFiModule

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  a.ini  build_esp.sh  build_x86.sh  messagesId.txt  platformio.ini  run_tests.sh  settings_linux.json  settings_windows.json  vs_config
arduino/: CMakeLists.txt
arduino/libraries/: CMakeLists.txt
cmake/: ESP8266Toolchain.cmake  toolchain.ESP8266.cmake
doc/: message_protocol.txt
gtest/: CMakeLists.txt  pathConverterTests.cpp  runner.cpp
gtest/adapters/: stringAdapter.hpp
lib/: CMakeLists.txt
lib/ArduinoOTA/: CMakeLists.txt
lib/CRCpp/: CMakeLists.txt
lib/ESP8266WebServer/: CMakeLists.txt
lib/ESP8266WiFi/: CMakeLists.txt
lib/ESP8266mDNS/: CMakeLists.txt
lib/ESPAsyncTCP/: CMakeLists.txt
lib/GDBStub/: CMakeLists.txt
lib/arduino/: CMakeLists.txt
lib/arduino_main/: CMakeLists.txt
lib/beast/: CMakeLists.txt
lib/boost/: CMakeLists.txt
lib/gsl/: CMakeLists.txt
lib/json/: CMakeLists.txt
lib/messages/: CMakeLists.txt  proto_sources.cmake
lib/websocketpp/: CMakeLists.txt
src/: ArduinoFixed.hpp  CMakeLists.txt  main.cpp
src/cmake/: common_sources.cmake  esp8266_sources.cmake  x86_sources.cmake
src/container/: buffer.hpp
src/database/: database.hpp
src/dispatcher/: IDataReceiver.hpp  IFrameHandler.hpp  IHandler.hpp  dispatcher.cpp  dispatcher.hpp  handlers.cpp  handlers.hpp  jsonHandler.cpp  jsonHandler.hpp  messageHandler.cpp  messageHandler.hpp  stmMessageReceiver.hpp
src/dispatcher/handler/: getInfoHandler.cpp  getInfoHandler.hpp  handshakeHandler.cpp  handshakeHandler.hpp
src/esp8266/ftp/: FatLib.cpp  FatLib.h  ftpserver.cpp  ftpserver.h
src/esp8266/helper/: fileHandler.cpp  fileHandler.hpp  loggerHelper.cpp  loggerHelper.hpp  pathConverter.cpp  pathConverter.hpp
src/esp8266/server/: ftp.cpp  ftp.hpp
src/hal/esp8266/exceptions/: exceptionStubs.cpp
src/hal/esp8266/fs/: file_esp.cpp
src/hal/esp8266/net/: tcpSocket_esp.cpp
src/hal/esp8266/net/socket/: tcpClient_esp.cpp  tcpServer_esp.cpp
src/hal/esp8266/serial/: serialPort_esp.cpp
src/hal/esp8266/time/: sleep_esp.cpp  time_esp.cpp
src/hal/fs/: file.hpp  filesystem.hpp
src/hal/net/: tcpClient.hpp  tcpHandler.cpp  tcpHandler.hpp  tcpServer.hpp  tcpSocket.hpp  websocket.hpp
src/hal/net/http/: asyncHttpRequest.hpp  asyncHttpResponse.hpp  asyncHttpServer.hpp  fwd.hpp  httpMethod.hpp
src/hal/net/socket/: tcpClient.hpp  tcpServer.hpp  websocket.hpp
src/hal/serial/: serialPort.hpp
src/hal/time/: sleep.hpp  time.hpp
src/hal/x86/fs/: file_x86.cpp
src/hal/x86/net/: tcpClient_x86.cpp  tcpServer_x86.cpp  tcpSession.cpp  tcpSession.hpp  tcpSocket_x86.cpp  websocket_x86.cpp
src/hal/x86/net/http/: asyncHttpServer_x86.cpp  httpConnection_x86.cpp  httpConnection_x86.hpp
src/hal/x86/net/socket/: tcpClient_x86.cpp  tcpServer_x86.cpp  tcpSession.cpp  tcpSession.hpp  websocket_x86.cpp
src/hal/x86/serial/: buffer.hpp  serialPort_x86.cpp
src/hal/x86/time/: time_x86.cpp
src/handler/: IDataHandler.hpp  IDataReceiver.hpp  IFrameHandler.hpp  IFrameReceiver.hpp  IHandler.hpp  IMessageHandler.hpp  IMessageSender.hpp  baseHandler.cpp  baseHandler.hpp  dispatcher.cpp  dispatcher.hpp  handlers.cpp  handlers.hpp  handshakeHandler.cpp  handshakeHandler.hpp  jsonHandler.cpp  jsonHandler.hpp  jsonSender.hpp  messageHandler.cpp  messageHandler.hpp  messageReceiver.cpp  messageReceiver.hpp  stmMessageReceiver.hpp
src/helper/: pathConverter.cpp  pathConverter.hpp
src/logger/: ILogger.hpp  ILoggerBase.hpp  fileLogger.cpp  fileLogger.hpp  logger.cpp  logger.hpp  loggerBase.cpp  loggerBase.hpp  loggerConf.cpp  loggerConf.hpp  socketLogger.cpp  socketLogger.hpp  stdErrLogger.cpp  stdErrLogger.hpp  stdOutLogger.cpp  stdOutLogger.hpp
src/message/: IMessage.hpp  bootloaderMessages.hpp  messages.hpp
src/protocol/: IFrame.hpp  frame.hpp  frameHandler.cpp  frameHandler.hpp  packetHandler.cpp  packetHandler.hpp  stuffer.hpp
src/protocol/messages/: control.hpp
src/serializer/: serializer.hpp
src/settings/: settings.cpp  settings.hpp
src/statemachine/: helper.hpp  mcuConnection.cpp  mcuConnection.hpp  mcuConnectionFrontEnd.cpp  mcuConnectionFrontEnd.hpp  wifiModule.hpp
src/stream/: fileBuffer.cpp  fileBuffer.hpp  fileOStream.cpp  fileOStream.hpp  socketBuffer.cpp  socketBuffer.hpp  socketStream.cpp  socketStream.hpp
src/timer/: IManager.hpp  ITimer.hpp  intervalTimer.cpp  intervalTimer.hpp  manager.cpp  manager.hpp  timeoutTimer.cpp  timeoutTimer.hpp
src/utils/: types.cpp  types.hpp
test/: CMakeLists.txt  fakeit.hpp  pathConverterTests.cpp  runner.cpp  test2.cpp
test/ST/: package-lock.json  package.json  settings_windows.json
test/ST/framework/: binaryManager.js  messages.js  serial.js
test/ST/tests/: detectionTests.js  emptyTest.js  initTests.js  startup.js
test/UT/: CMakeLists.txt
test/UT/cmake/: target_sources.cmake  ut_sources.cmake
test/UT/src/: dummyTests.cpp
test/UT/src/helper/: frameHelper.cpp  frameHelper.hpp
test/UT/src/matcher/: arrayCompare.hpp  messageIdCompare.hpp
test/UT/src/message/: CMakeLists.txt  proto_sources.cmake  testing_message.proto
test/UT/src/mock/: frameHandlerMock.hpp  frameReceiverMock.hpp  messageHandlerMock.hpp  rawDataReceiverMock.hpp  writerHandlerMock.hpp
test/UT/src/stub/: ReceiverStub.hpp  receiverStub.hpp  timeStub.cpp  timeStub.hpp
test/UT/src/test/: testMain.cpp
test/UT/src/test/dispatcher/: dispatcherTests.cpp  jsonHandlerTests.cpp  messageHandlerTests.cpp
test/UT/src/test/handler/: baseHandlerTests.cpp  dispatcherTests.cpp  jsonHandlerTests.cpp  messageHandlerTests.cpp  messageReceiverTests.cpp
test/UT/src/test/protocol/: frameHandlerTests.cpp  frameTests.cpp  packetHandlerTests.cpp
test/UT/src/test/serializer/: serializerTests.cpp
test/UT/src/test/timer/: intervalTimerTests.cpp  managerTests.cpp  timeoutTimerTests.cpp
test/adapters/: stringAdapter.hpp
